# Dynamic-island-on-hyprland

./: .gitignore  CMakeLists.txt  ClockLayer.qml  ConnectivityDetailPanel.qml  ControlCenterLayer.qml  DynamicIslandWindow.qml  ExpandedPlayerLayer.qml  OsdLayer.qml  README.md  SplitIconLayer.qml  SwipeCustomInfoLayer.qml  SwipeLyricsLayer.qml  SysBackend.cpp  SysBackend.h  UserConfig.qml  WorkspaceLayer.qml  WorkspaceOverviewLayer.qml  shell.qml
ConnectivityBackend/: .gitignore  CMakeLists.txt  ConnectivityBackendPlugin.cpp  WifiController.cpp  WifiController.h  WifiNetworkModel.cpp  WifiNetworkModel.h  build.sh
